--- a/screenRelayer/screenRelayer.qrc
+++ b/screenRelayer/screenRelayer.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/screenRelayer">
         <file>icons/logo.png</file>
+        <file>icons/logo.ico</file>
     </qresource>
 </RCC>
